Bug 1136004: fix TSAN warning in webrtc when RED isn't enabled r=cpeterson