media/webrtc/trunk/webrtc/modules/audio_coding/main/acm2/audio_coding_module_impl.cc
@@ -1416,11 +1416,10 @@ bool AudioCodingModuleImpl::REDStatus() const {
 }
 
 // Configure RED status i.e on/off.
-int AudioCodingModuleImpl::SetREDStatus(
-#ifdef WEBRTC_CODEC_RED
-    bool enable_red) {
+int AudioCodingModuleImpl::SetREDStatus(bool enable_red) {
   CriticalSectionScoped lock(acm_crit_sect_);
 
+#ifdef WEBRTC_CODEC_RED
   if (enable_red == true && codec_fec_enabled_ == true) {
     WEBRTC_TRACE(webrtc::kTraceWarning, webrtc::kTraceAudioCoding, id_,
                  "Codec internal FEC and RED cannot be co-enabled.");
@@ -1439,7 +1438,6 @@ int AudioCodingModuleImpl::SetREDStatus(
   is_first_red_ = true;  // Make sure we restart RED.
   return 0;
 #else
-    bool /* enable_red */) {
   red_enabled_ = false;
   WEBRTC_TRACE(webrtc::kTraceWarning, webrtc::kTraceAudioCoding, id_,
                "  WEBRTC_CODEC_RED is undefined => red_enabled_ = %d",
